--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -175,6 +175,20 @@ img {
         margin-block-start: 30px;
     }
 }
+@media (prefers-reduced-motion: reduce) {
+    /* Force vertical stacking even on desktop */
+    .horizontal {
+      flex-direction: column ;
+    }
+    .horizontal__container {
+      width: 80%;
+      height: 550px;
+    &:nth-child(1){
+        margin-inline-start: 0;
+    }
+    }
+  }
+  
 // Facts about goal 6 
 .history { 
     height: 100vh;
