--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -171,7 +171,7 @@ img {
   width: 100%;
   height: 20%;
   background-size: auto 100%;
-  background: url(../elements/wave.svg) repeat-x;
+  background: url(assets/elements/wave.svg) repeat-x;
 }
 
 .horizontal {
