--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -117,7 +117,7 @@ img {
         width: 100%;
         height: 20%;
         background-size: auto 100%;
-        background: url(../elements/wave.svg) repeat-x;
+        background: url(assets/elements/wave.svg) repeat-x;
     }
 }
 // Horizontal-Scroll
