--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -171,7 +171,7 @@ img {
   width: 100%;
   height: 20%;
   background-size: auto 100%;
-  background: url(../elements/wave.svg) repeat-x;
+  background: url(../elements/dry-earth.svg);
 }
 
 .horizontal {
@@ -244,6 +244,33 @@ img {
   position: relative;
   max-width: 100%;
   padding-inline: 2rem;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: bottom;
+}
+.history__part--1 {
+  background-image: url("../elements/village1.svg");
+}
+.history__part--2 {
+  background-image: url("../elements/boiling-water.svg");
+}
+.history__part--3 {
+  background-image: url("../elements/crowd.svg");
+}
+.history__part--4 {
+  background-image: url("../elements/four-people.svg");
+}
+.history__part--5 {
+  background-image: url("../elements/river-countries.svg");
+}
+.history__part--6 {
+  background-image: url("../elements/river.svg");
+}
+.history__part--7 {
+  background-image: url("../elements/new-beginning.svg");
+}
+.history__part--8 {
+  background-image: url("../elements/ending.svg");
 }
 .history__part--intro {
   padding-inline: 1rem;
@@ -252,17 +279,10 @@ img {
   justify-content: unset;
 }
 .history__part--drought-gradient {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(50, 185, 238, 0.5) 30%, rgba(252, 228, 150, 0.1) 65%), url("../elements/dry-earth.svg");
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(50, 185, 238, 0.5) 30%, rgba(252, 228, 150, 0.1) 65%), url("../elements/village.svg");
   background-size: 100%;
   background-position: center top, center bottom;
   background-repeat: no-repeat;
-}
-.history__part--hope-gradient {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(50, 185, 238, 0.5) 30%, rgba(241, 138, 35, 0.5) 90%, rgba(236, 195, 149, 0.5) 90%);
-}
-.history__part--red-gradient {
-  background: linear-gradient(180deg, rgba(236, 195, 149, 0.5) 0, rgba(238, 50, 50, 0.5) 30%, rgba(0, 0, 0, 0.1) 80%);
-  padding: 0;
 }
 .history__importantText {
   font-family: "open-sans";
@@ -272,7 +292,7 @@ img {
 }
 .history__sunrise {
   height: 200vh;
-  background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(84, 57, 99) 26%, rgb(204, 83, 107) 55%, rgb(253, 146, 112) 94%, rgb(0, 0, 0) 94%);
+  background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(9, 23, 41) 20%, rgb(60, 60, 124) 40%, rgb(102, 36, 86) 60%, rgb(160, 115, 16) 90%);
 }
 .history__text {
   width: 58ch;
@@ -298,37 +318,26 @@ img {
   transition-delay: 2.2s;
 }
 .history__text--top {
-  margin-block-start: 12rem;
+  margin-block-start: 10rem;
 }
 .history__text--left {
   align-self: flex-start;
   position: absolute;
-  top: 20%;
+  top: 25%;
 }
 .history__text--right {
   align-self: flex-end;
-  margin-inline-end: 7rem;
+  margin-inline-end: 5rem;
   width: 30ch;
   position: absolute;
-  bottom: 15%;
+  bottom: 30%;
 }
 .history__earth-container {
   width: 100%;
-  height: 35vw;
-  max-height: 200px;
+  max-height: 400px;
   overflow: hidden;
-  margin-block: 3rem;
-}
-.history__river {
-  stroke: var(--backround-color);
-  stroke-width: 2.5rem;
-  fill: transparent;
-  width: 100%;
-  height: 100%;
-  transition: all 3s;
   position: absolute;
-  left: 0;
-  top: 25%;
+  bottom: 0;
 }
 .history__character-img {
   width: 10%;
@@ -344,12 +353,8 @@ img {
   width: 8%;
   margin-block-start: 1.5rem;
 }
-.history__boiling-img {
-  width: 20%;
-  margin-block: 3rem;
-}
 .history__earth-img {
-  width: 30%;
+  width: 60%;
   transition: all 6s;
 }
 .history__plant-img {
