--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -117,7 +117,7 @@ img {
         width: 100%;
         height: 20%;
         background-size: auto 100%;
-        background: url(../elements/wave.svg) repeat-x;
+        background: url(../elements/dry-earth.svg);
     }
 }
 // Horizontal-Scroll
@@ -194,6 +194,34 @@ img {
         position: relative;
         max-width: 100%;
         padding-inline: 2rem;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-position: bottom;
+
+        &--1 {
+            background-image: url('../elements/village1.svg');
+        }
+        &--2 {
+            background-image: url('../elements/boiling-water.svg');
+        }
+        &--3 {
+            background-image: url('../elements/crowd.svg');
+        }
+        &--4 {
+            background-image: url('../elements/four-people.svg');
+        }
+        &--5 {
+            background-image: url('../elements/river-countries.svg');
+        }
+        &--6 {
+            background-image: url('../elements/river.svg');
+        }
+        &--7 {
+            background-image: url('../elements/new-beginning.svg');
+        }
+        &--8 {
+            background-image: url('../elements/ending.svg');
+        }
         
         &--intro {
             padding-inline: 1rem;
@@ -208,31 +236,15 @@ img {
                     rgba(50, 185, 238, 0.5) 30%,
                     rgba(252, 228, 150, 0.1) 65%
                 ),
-                url("../elements/dry-earth.svg");
+                url("../elements/village.svg");
             background-size: 100%;
             background-position:
                 center top,
                 center bottom;
             background-repeat: no-repeat;
         }
-        &--hope-gradient {
-            background: linear-gradient(
-                180deg,
-                rgba(0, 0, 0, 0.7) 0%,
-                rgba(50, 185, 238, 0.5) 30%,
-                rgba(241, 138, 35, 0.5) 90%,
-                rgba(236, 195, 149, 0.5) 90%
-            );
-        }
-        &--red-gradient {
-            background: linear-gradient(
-                180deg,
-                rgba(236, 195, 149, 0.5) 0,
-                rgba(238, 50, 50, 0.5) 30%,
-                rgba(0, 0, 0, 0.1) 80%
-            );
-            padding: 0;
-        }
+       
+        
     }
     &__importantText { 
         font-family: 'open-sans';
@@ -244,18 +256,18 @@ img {
         height: 200vh;
         background: linear-gradient(
             180deg,
-            rgba(0, 0, 0, 1) 0%,
-            rgba(84, 57, 99, 1) 26%,
-            rgba(204, 83, 107, 1) 55%,
-            rgba(253, 146, 112, 1) 94%,
-            rgba(0, 0, 0, 1) 94%
+            rgb(0, 0, 0) 0%,
+            rgb(9, 23, 41, 1) 20%,
+            rgba(60, 60, 124, 1) 40%,
+            rgba(102, 36, 86, 1) 60%,
+            rgba(160, 115, 16, 1) 90%
         );
     }
     
     &__text {
         width: 58ch;
         max-width: 100%;
-        
+
         &--characterIntro {
             font-size: var(--step-1);
         }
@@ -276,39 +288,28 @@ img {
             transition-delay: 2.2s;
         }
         &--top {
-            margin-block-start: 12rem;
+            margin-block-start: 10rem;
         }
         &--left {
             align-self: flex-start;
             position: absolute;
-            top: 20%;
+            top: 25%;
         }
         &--right {
             align-self: flex-end;
-            margin-inline-end: 7rem;
+            margin-inline-end: 5rem;
             width: 30ch;
             position: absolute;
-            bottom: 15%;
+            bottom: 30%;
         }
     }
     // Cuts the earth image in half
     &__earth-container {
         width: 100%;
-        height: 35vw;
-        max-height: 200px;
+        max-height: 400px;
         overflow: hidden;
-        margin-block: 3rem;
-    }
-    &__river {
-        stroke: var(--backround-color);
-        stroke-width: 2.5rem;
-        fill: transparent;
-        width: 100%;
-        height: 100%;
-        transition: all 3s;
         position: absolute;
-        left: 0;
-        top: 25%;
+        bottom: 0;
     }
     &__character-img {
         width: 10%;
@@ -324,12 +325,8 @@ img {
             margin-block-start: 1.5rem;
         }
     }
-    &__boiling-img {
-        width: 20%;
-        margin-block: 3rem;
-    }
     &__earth-img {
-        width: 30%;
+        width: 60%;
         transition: all 6s;
     }
     &__plant-img {
