--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -175,66 +175,29 @@ img {
 }
 
 .horizontal {
-  display: flex;
+  width: -moz-max-content;
+  width: max-content;
   height: 100vh;
-  gap: 2rem;
-  background-color: #09557e;
-  align-items: center;
-  overflow-x: hidden;
+  position: relative;
+  overflow: hidden;
 }
 .horizontal__container {
-  flex-shrink: 0;
-  padding: 1rem;
-  height: 79%;
-  width: 30%;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border: 1.5px solid #fff;
-  border-radius: 20px;
-}
-.horizontal__container:nth-child(1) {
-  margin-inline-start: 2rem;
-}
-
-.scrollContent {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   height: 100%;
-  margin-block-start: 80px;
-}
-.scrollContent > * {
-  text-align: center;
-}
-.scrollContent__container {
-  position: relative;
-}
-.scrollContent__container--img {
-  display: block;
-  width: 150px;
-}
-.scrollContent__container--title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
-@media (max-width: 999px) {
-  .horizontal__container {
-    width: 80%;
-    height: 550px;
-  }
-  .scrollContent {
-    margin-block-start: 30px;
-  }
-}
-.history {
+.scroll-snap {
   height: 100vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   scroll-snap-type: y mandatory;
 }
-.history__part {
+.scroll-snap__on {
   scroll-snap-align: start;
+}
+
+.history__part {
+  min-width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -242,7 +205,6 @@ img {
   align-items: center;
   text-align: center;
   position: relative;
-  max-width: 100%;
   padding-inline: 2rem;
   background-repeat: no-repeat;
   background-size: 100%;
@@ -334,6 +296,7 @@ img {
 }
 .history__earth-container {
   width: 100%;
+  height: 35vh;
   max-height: 400px;
   overflow: hidden;
   position: absolute;
