--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -102,37 +102,8 @@ li {
   line-height: var(--line-height-paragraph);
 }
 
-img {
-  width: 100%;
-  max-width: 100%;
-  height: auto;
-}
-
 .line-break {
   display: block;
-}
-
-.section-top {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  height: 100vh;
-  padding-inline: 3rem;
-  gap: 1%;
-}
-.section-top__text {
-  font-size: var(--step-1);
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: var(--line-height-goal-p);
-  max-width: 40ch;
-}
-.section-top__icon {
-  transition: transform 0.5s ease-in-out;
-  opacity: 100%;
-  width: 8vh;
 }
 
 .splash {
@@ -148,52 +119,32 @@ img {
     opacity: 0;
   }
 }
-.section-wave {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  height: 100vh;
-  width: 100%;
-  overflow: hidden;
-}
-.section-wave__text {
-  font-size: var(--step-2);
-  max-width: 45ch;
-  transition: font-size 5s;
-}
-.section-wave__icon {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 20%;
-  background-size: auto 100%;
-  background: url(../elements/dry-earth.svg);
-}
-
 .horizontal {
-  width: -moz-max-content;
-  width: max-content;
-  height: 100vh;
   position: relative;
+  height: 100vh;
+  width: 100%;
   overflow: hidden;
 }
-.horizontal__container {
-  display: flex;
-  flex-direction: row;
+.horizontal__background {
+  position: absolute;
   height: 100%;
+  width: 150vw;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom left;
 }
-
-.scroll-snap {
-  height: 100vh;
-  overflow-y: auto;
-  scroll-snap-type: y mandatory;
+.horizontal__background--1 {
+  background-image: url("../elements/village1.svg");
 }
-.scroll-snap__on {
-  scroll-snap-align: start;
+.horizontal__background--2 {
+  background-image: url("../elements/village.svg");
+}
+.horizontal__character {
+  position: absolute;
+  bottom: 5%;
+  left: 5%;
+  height: 40vh;
+  z-index: 2;
 }
 
 .history__part {
@@ -209,9 +160,6 @@ img {
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: bottom;
-}
-.history__part--1 {
-  background-image: url("../elements/village1.svg");
 }
 .history__part--2 {
   background-image: url("../elements/boiling-water.svg");
@@ -241,10 +189,19 @@ img {
   justify-content: unset;
 }
 .history__part--drought-gradient {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(50, 185, 238, 0.5) 30%, rgba(252, 228, 150, 0.1) 65%), url("../elements/village.svg");
-  background-size: 100%;
-  background-position: center top, center bottom;
-  background-repeat: no-repeat;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(50, 185, 238, 0.5) 30%, rgba(252, 228, 150, 0.1) 65%);
+}
+.history__heading {
+  font-size: var(--step-1);
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: var(--line-height-goal-p);
+  max-width: 40ch;
+}
+.history__icon {
+  transition: transform 5s ease-in-out;
+  opacity: 100%;
+  width: 8vh;
 }
 .history__importantText {
   font-family: "open-sans";
@@ -253,8 +210,14 @@ img {
   transition: all 3s;
 }
 .history__sunrise {
-  height: 200vh;
-  background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(9, 23, 41) 20%, rgb(60, 60, 124) 40%, rgb(102, 36, 86) 60%, rgb(160, 115, 16) 90%);
+  background: linear-gradient(180deg, rgb(102, 36, 86) 0%, rgb(160, 115, 16) 100%);
+}
+.history__bluegradient {
+  position: absolute;
+  width: 100%;
+  height: 400vh;
+  z-index: -1;
+  background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(9, 23, 41) 20%, rgb(9, 23, 41) 40%, rgb(9, 23, 41) 60%, rgb(60, 60, 124) 75%, rgb(102, 36, 86) 100%);
 }
 .history__text {
   width: 58ch;
@@ -341,13 +304,14 @@ img {
 }
 .message__slogan {
   font-size: var(--step-0);
-  margin-block: 3rem;
+  margin-block-start: 3rem;
   color: rgb(72, 178, 239);
   text-transform: uppercase;
   font-weight: 600;
 }
 .message__btn {
   padding: 1.2rem;
+  margin-block-start: 3rem;
   border-radius: 1rem;
   border: none;
   font-size: 0.9rem;
@@ -369,6 +333,9 @@ img {
   .history__text--written-firstline,
   .history__text--written-secondline {
     white-space: wrap;
+  }
+  .history__part {
+    background-size: 150%;
   }
   .history__character-img {
     width: 35%;
